Updated the position of game rules text to fix overlapping issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -233,7 +233,7 @@ main {
   z-index: 0;
   width: 500px;
   height: 450px;
-  bottom: 40%;
+  bottom: 60%;
   left: 0;
   justify-content: center;
   align-items: center;
